# rob

./: Запись экрана от 12.11.2023 18:03:02.webm
ex01/: ex01.txt  ~.bashrc
ex01/~/: ~.bashrc
ex02/: package_path_ros2topic.txt
ex04/: colcon_build.txt
module 3/ex01/: package.xml  setup.py
module 3/ex02/python_turtle_commands/: package.xml  setup.cfg  setup.py
module 3/ex02/python_turtle_commands/action_tutorials_interfaces/: CMakeLists.txt  package.xml
module 3/ex02/python_turtle_commands/action_tutorials_interfaces/action/: MessageTurtleCommands.action
module 3/ex02/python_turtle_commands/python_turtle_commands/: action_client.py  action_server.py
module 3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
module 3/ex04/: doctor.txt
module 3/ex05/: package.xml  setup.py
module1/ex00/: commands.txt
module2/ex01/: ~.bashrc
module2/ex03/: package.xml
module2/ex05/: rosnode_info.txt  rosnode_list.txt
module2/ex06/: cmd_vel.txt
module2/ex07/: parameter_server.txt
module2/ex08/: rqt_console.csv  three_turtles.launch
module2/ex09/: CMakeLists.txt  package.xml
module2/ex10/: package.xml  setup.py
module4/ex01/: last_transform.txt  transform.txt
module4/ex02/: Запись экрана от 11.11.2023 16:46:46.webm
module5/ex01/: robot_display.launch.py  Запись экрана от 11.11.2023 19:15:25.webm
module5/ex02/: robot_display.launch.py
module5/ex03/: robot.urdf.xacro
module5/ex04/: circle_movement.launch.py  circle_movement.py  robot.urdf.xacro
module5/ex05/: move.py  robot.urdf.xacro
module6/ex01/: Запись экрана от 30.11.2023 22:08:19.webm
(+37 files in other folders)
